feat: Refine website content and styling for launch

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
         /* --- Header & Hero --- */
         .header {
-            background-color: var(--bg-light);
-            padding: 20px 0;
+            background-color: #ffffff;
+            padding: 15px 0;
             border-bottom: 1px solid #ddd;
         }
 
@@ -42,15 +42,8 @@
             align-items: center;
         }
 
-        .logo {
-            font-size: 1.8em;
-            font-weight: bold;
-            color: var(--primary-color);
-            text-decoration: none;
-        }
-
         .logo img {
-            max-height: 40px; /* Adjust this value to fit your logo's dimensions */
+            max-height: 55px; /* Adjust this value to fit your logo's dimensions */
             width: auto;
             vertical-align: middle; /* Aligns the image nicely with the nav links */
         }
@@ -437,28 +430,12 @@
             </div>
         </section>
 
-        <!-- TESTIMONIALS SECTION -->
-        <section id="testimonials" class="section section-dark">
-            <div class="container">
-                <h2 class="section-title">Don't Just Take Our Word For It</h2>
-                <p class="section-subtitle">See how we've helped businesses like yours go from data chaos to data clarity.</p>
-                <div class="testimonial-grid">
-                    <div class="testimonial-card">
-                        <p class="testimonial-text">"Before Crosby BI, our monthly reporting took 15 hours. Now, it's fully automated. We've gained back two full workdays a month and our data is always up-to-date."</p>
-                        <p class="testimonial-author">- Marketing Director, E-commerce Brand</p>
-                    </div>
-                    <div class="testimonial-card">
-                        <p class="testimonial-text">"The custom dashboard Brandon built is the single source of truth for our entire company. We can finally make strategic decisions with confidence."</p>
-                        <p class="testimonial-author">- CEO, Logistics Company</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <!-- TESTIMONIALS SECTION (Temporarily Hidden) -->
 
         <!-- STAKES SECTION -->
         <section id="stakes" class="section section-light">
             <div class="container">
-                <h2 class="section-title">Where Will Your Business Be in 3 Months?</h2>
+                <h2 class="section-title">Choose Your Path Forward</h2>
                 <div class="stakes-grid">
                     <div class="stake-column stake-failure">
                         <h3>Without a Clear Plan</h3>
@@ -472,8 +449,8 @@
                     <div class="stake-column stake-success">
                         <h3>With Crosby BI as Your Guide</h3>
                         <ul>
-                            <li>Access automated, up-to-date insights.</li>
-                            <li>Make confident decisions backed by data.</li>
+                            <li>Gain access to automated, real-time insights.</li>
+                            <li>Enable confident decisions backed by facts.</li>
                             <li>Have a single source of truth for your KPIs.</li>
                             <li>Focus your time on growth, not spreadsheets.</li>
                         </ul>
