Updated Guide Offer

--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@
                     <div class="stake-column stake-success">
                         <h3 data-key="stakesSuccessTitle">With Crosby BI as Your Guide</h3>
                         <ul>
-                            <li data-key="stakesSuccess1">Gain access to automated, real-time insights.</li>
-                            <li data-key="stakesSuccess2">Enable confident decisions backed by facts.</li>
+                            <li data-key="stakesSuccess1">Gain access to insights quickly.</li>
+                            <li data-key="stakesSuccess2">Enable confident decisions backed by data.</li>
                             <li data-key="stakesSuccess3">Have a single source of truth for your KPIs.</li>
                             <li data-key="stakesSuccess4">Focus your time on growth, not spreadsheets.</li>
                         </ul>
