--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                     <div class="stake-column stake-success">
                         <h3 data-key="stakesSuccessTitle">With Crosby BI as Your Guide</h3>
                         <ul>
-                            <li data-key="stakesSuccess1">Gain access to insights quickly.</li>
+                            <li data-key="stakesSuccess1">Gain access to automated, up-to-date insights.</li>
                             <li data-key="stakesSuccess2">Enable confident decisions backed by data.</li>
                             <li data-key="stakesSuccess3">Have a single source of truth for your KPIs.</li>
                             <li data-key="stakesSuccess4">Focus your time on growth, not spreadsheets.</li>
@@ -572,8 +572,8 @@
                 stakesFail3: "Remain frustrated by scattered, messy data.",
                 stakesFail4: "Fall behind data-driven competitors.",
                 stakesSuccessTitle: "With Crosby BI as Your Guide",
-                stakesSuccess1: "Gain access to automated, real-time insights.",
-                stakesSuccess2: "Enable confident decisions backed by facts.",
+                stakesSuccess1: "Gain access to automated, up-to-date insights.",
+                stakesSuccess2: "Enable confident decisions backed by data.",
                 stakesSuccess3: "Have a single source of truth for your KPIs.",
                 stakesSuccess4: "Focus your time on growth, not spreadsheets.",
                 finalCtaTitle: "Ready to Unlock the Power of Your Data?",
