Updated Spanish Translation

--- a/index.html
+++ b/index.html
@@ -627,10 +627,10 @@
                 stakesFail3: "Seguir frustrado por datos dispersos y desordenados.",
                 stakesFail4: "Quedarse atrás de los competidores basados en datos.",
                 stakesSuccessTitle: "Con Crosby BI como su Guía",
-                stakesSuccess1: "Obtener acceso a información automatizada y en tiempo real.",
-                stakesSuccess2: "Permitir decisiones seguras respaldadas por hechos.",
-                stakesSuccess3: "Tener una única fuente de verdad para sus KPIs.",
-                stakesSuccess4: "Enfocar su tiempo en el crecimiento, no en hojas de cálculo.",
+                stakesSuccess1: "Obtenga acceso a información automatizada y actualizada.",
+                stakesSuccess2: "Tome decisiones seguras respaldadas por datos.",
+                stakesSuccess3: "Tenga una única fuente de verdad para sus KPIs.",
+                stakesSuccess4: "Enfoque su tiempo en el crecimiento, no en las hojas de cálculo.",
                 finalCtaTitle: "¿Listo para Desbloquear el Poder de sus Datos?",
                 finalCtaSubtitle: "Deje de permitir que información valiosa se esconda en hojas de cálculo desordenadas. Construyamos una solución que impulse el crecimiento y le ahorre tiempo.",
                 finalCtaButton: "Programe su Consulta Gratuita",
