--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
             vertical-align: middle; /* Aligns the image nicely with the nav links */
         }
 
+        @media (max-width: 768px) {
+            .navbar {
+                flex-direction: column;
+                gap: 15px;
+            }
+            .nav-right {
+                flex-direction: column;
+                gap: 15px;
+            }
+            .nav-links a { margin-left: 15px; margin-right: 15px; }
+            .lang-switcher { margin-left: 0; }
+        }
+
         .nav-right {
             display: flex;
             align-items: center;
