--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
             }
             .nav-right {
                 flex-direction: column;
+                align-items: center;
                 gap: 15px;
             }
-            .nav-links a { margin-left: 15px; margin-right: 15px; }
+            .nav-links {
+                display: flex;
+                flex-direction: column;
+                gap: 15px;
+            }
+            .nav-links a { margin-left: 0; }
             .lang-switcher { margin-left: 0; }
         }
 
