Updated Mobile Navigation

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             align-items: center;
         }
 
+        .nav-links {
+            display: flex; /* Ensures consistent flex behavior */
+            align-items: center;
+        }
+
         .nav-links a {
             color: var(--primary-color);
             text-decoration: none;
