Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crosby BI | Power BI Consulting & Dashboard Development</title>
     <meta name="description" content="Crosby BI transforms your messy data into clear, automated Power BI dashboards so you can stop guessing and make decisions with confidence.">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PTYLY5EW12"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-PTYLY5EW12');
+    </script>
+
     <style>
         :root {
             --primary-color: #0D2F4F; /* Dark Sapphire - for backgrounds and text */
